[poincare] Fix the replacement of unknowns in the storage
In the Graph app, define f(x) = cos(x) and g(x)=diff(f(x),x,x).
The graph and table are perfectly computed, but in the Calculation apps,
g(5) fails.

--- a/poincare/Makefile
+++ b/poincare/Makefile
@@ -97,6 +97,7 @@ objs += $(addprefix poincare/src/,\
   nth_root.o\
   number.o\
   opposite.o\
+  parametered_expression_helper.o\
   parenthesis.o\
   permute_coefficient.o\
   power.o\
